# api

./: .dockerignore  .drone.yml  .gitignore  ADMIN_API_ENDPOINTS.md  AGENTS.md  API_CHANGELOG.md  API_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  Dockerfile  INVOICE_MODEL_DESIGN.md  README.md  config.toml  config.yaml  dev_setup.sql  docker-compose.e2e.yaml  docker-compose.yaml  email.html  grafana.json  iptables.md  log.txt
lnvps_agent/: Cargo.toml  Dockerfile  settings.example.yaml
lnvps_agent/src/: agent.rs  api_client.rs  conversation.rs  identity.rs  lib.rs  main.rs  nip98.rs  settings.rs
lnvps_agent/src/agent/: executor.rs  mod.rs  prompts.rs
lnvps_agent/src/channel/: email.rs  kind1.rs  mod.rs
lnvps_agent/src/tools/: mod.rs
lnvps_api/: Cargo.toml  Dockerfile  build.rs  config.yaml  dev_setup.sql  email.html  invoice.html  verify-email.html
lnvps_api/examples/: revolut_sandbox.rs  revolut_widget.html
lnvps_api/src/: exchange.rs  fee_estimate.rs  json_api.rs  lib.rs  mocks.rs  nip98.rs  payment_factory.rs  settings.rs  ssh_client.rs  status.rs  vm_history.rs  worker.rs
lnvps_api/src/api/: apps.rs  contact.rs  docs.html  docs.rs  ip_space.rs  legal.rs  mod.rs  model.rs  nostr_domain.rs  oauth.rs  openapi.json  referral.rs  routes.rs  subscriptions.rs  swagger.html  webauthn.rs  webhook.rs
lnvps_api/src/data_migration/: arp_ref_fixer.rs  dns.rs  email_hash_backfill.rs  encryption_migration.rs  ip6_init.rs  mod.rs  orphaned_custom_templates.rs  payment_method_config.rs  purge_never_paid_deleted_vms.rs  ssh_key_migration.rs  vm_subscription_backfill.rs
lnvps_api/src/dns/: cloudflare.rs  mod.rs  ovh.rs
lnvps_api/src/dvm/: lnvps.rs  mod.rs
lnvps_api/src/fiat/: mod.rs  revolut.rs
lnvps_api/src/host/: dummy_host.rs  libvirt.rs  mod.rs  proxmox.rs
lnvps_api/src/lightning/: bitvora.rs  lnd.rs  mod.rs
lnvps_api/src/notifications/: email.rs  mod.rs  nip17.rs  telegram.rs  whatsapp.rs
lnvps_api/src/ovh/: mod.rs
lnvps_api/src/payments/: invoice.rs  mod.rs  onchain.rs  revolut.rs  stripe.rs
lnvps_api/src/provisioner/: capacity.rs  integration_retry_tests.rs  ip_range.rs  lnvps.rs  lnvps_network.rs  mod.rs  network.rs  pricing.rs  retry_tests.rs  rollback_tests.rs  vm.rs  vm_network.rs
lnvps_api/src/referral/: mod.rs
lnvps_api/src/router/: linux_ssh.rs  mikrotik.rs  mod.rs  ovh.rs
lnvps_api/src/subscription/: ip_range.rs  mod.rs  vm.rs
lnvps_api_admin/: Cargo.toml  Dockerfile  config.yaml
lnvps_api_admin/src/: app_seeds.rs  lib.rs  settings.rs
lnvps_api_admin/src/admin/: access_policies.rs  apps.rs  auth.rs  bulk_message.rs  companies.rs  cost_plans.rs  costs.rs  custom_pricing.rs  dns_servers.rs  docs.html  docs.rs  hosts.rs  ip_ranges.rs  ip_space.rs  mod.rs  model.rs  passkeys.rs  payment_methods.rs  referrals.rs  regions.rs  reports.rs  roles.rs  routers.rs  subscriptions.rs  user_payment_methods.rs  users.rs  vm_ip_assignments.rs  vm_os_images.rs  vm_templates.rs  vms.rs  websocket.rs
lnvps_api_common/: Cargo.toml
lnvps_api_common/src/: capacity.rs  client_ip.rs  exchange.rs  geoip.rs  json_api.rs  kv.rs  lib.rs  mock.rs  model.rs  network.rs  nip98.rs  ovh.rs  pricing.rs  retry.rs  routes.rs  session.rs  shasum.rs  status.rs  vat.rs  vm_history.rs  work.rs
lnvps_api_common/src/dns/: cloudflare.rs  mod.rs  ovh.rs
lnvps_api_common/src/registry/: krill.rs  mod.rs  (+1 more)
lnvps_db/: Cargo.toml
lnvps_db/migrations/: 20241103155733_init.sql  20241126205723_rates.sql  20241127163556_networking.sql  20241204142919_delete-vm.sql  20250217153119_drop_vm_resources.sql  20250303152800_ip_refs.sql  20250305104739_referrals.sql  20250305132119_load_factor.sql  20250305215123_amount-float.sql  20250306113236_custom_pricing.sql  20250310153305_fiat_payment.sql  20250311135933_taxes.sql  20250313140640_empty_country.sql  20250324143556_load_factors.sql  20250325113115_extend_ip_range.sql  20250325151434_vlan_to_range_config.sql  20250327124211_ip_allocation_mode.sql  20250328220956_fixes.sql  20250402115943_nostr_address.sql  20250501132143_billing_info.sql  20250501162308_company_info.sql  20250618123130_payment_type.sql  20250729000000_vm_history.sql  20250731000001_change_vm_history_action_type_to_int.sql  20250801000000_rbac_system.sql  20250807000000_company_base_currency.sql  20250808000000_fix_same_currency_payment_rates.sql  20250808144512_add_nostr_domain_last_status_change.sql  20250809000000_remove_is_active_from_role_assignments.sql  20250811000000_add_upgrade_params_column.sql  20250813000000_add_nwc_connection_string.sql  20250813142400_expand_token_columns.sql  20250814000000_custom_template_limits.sql  20260127000000_subscription_billing_system.sql  20260127000001_subscription_rbac_permissions.sql  20260130000000_ip_range_subscription.sql  20260130000001_subscription_line_item_type.sql  20260130000002_ip_space_rbac_permissions.sql  20260130000003_remove_interval_columns.sql  20260215000000_add_processing_fee.sql  (+60 more)
lnvps_db/src/: admin.rs  comma_separated.rs  encrypted_string.rs  encryption.rs  hydrate.rs  lib.rs  model.rs  mysql.rs  nostr.rs
lnvps_e2e/: Cargo.toml
lnvps_e2e/src/: admin_api.rs  client.rs  db.rs  lib.rs  lifecycle.rs  lightning.rs  nip98.rs  onchain.rs  rbac.rs  soft_authenticator.rs  user_api.rs  webauthn.rs  worker.rs
lnvps_fw/: Cargo.toml  Dockerfile  README.md
lnvps_fw/lnvps_ebpf/: Cargo.toml
lnvps_fw/lnvps_fw_common/: Cargo.toml
lnvps_fw/lnvps_fw_service/: Cargo.toml  build.rs  config.example.yaml
lnvps_fw_service/: Cargo.toml  build.rs
lnvps_fw_service/src/: main.rs
lnvps_health/: Cargo.toml  config.example.yaml  config.yaml
lnvps_health/src/: main.rs  metrics.rs  notify.rs
lnvps_host_util/: Cargo.toml  Dockerfile
lnvps_host_util/src/: gpu.rs  main.rs
lnvps_nostr/: Cargo.toml  Dockerfile  README.md  config.yaml  index.html
lnvps_nostr/src/: main.rs  routes.rs
lnvps_operator/: Cargo.toml  Dockerfile  README.md  config.minimal.yaml  config.yaml  k8s-minimal.yaml
lnvps_operator/src/: app_deployments.rs  main.rs  nostr_domains.rs
try-procedure/: Cargo.toml
try-procedure/src/: lib.rs
(+151 files in other folders)
