[workspace]
resolver = "3"
members = [
    "lnvps_db",
    "lnvps_api",
    "lnvps_api_admin",
    "lnvps_api_common",
    "lnvps_nostr",
    "lnvps_common",
    "lnvps_operator"
]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.83"
log = "0.4.21"
env_logger = "0.11.7"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
rocket = { version = "0.5.1", features = ["json"] }
config = { version = "0.15.8", features = ["yaml"] }
hex = "0.4.3"
ipnetwork = { git = "https://git.v0l.io/Kieran/ipnetwork.git", rev = "35977adc8103cfc232bc95fbc32f4e34f2b6a6d7" }
async-trait = "0.1.83"