[workspace]
resolver = "3"
members = [
    "lnvps_db",
    "lnvps_api",
    "lnvps_api_admin",
    "lnvps_api_common",
    "lnvps_nostr",
    "lnvps_operator",
    "lnvps_health",
    "lnvps_host_util",
    "try-procedure",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
config = { version = "0.15", features = ["yaml"] }
hex = "0.4"
ipnetwork = { git = "https://git.v0l.io/Kieran/ipnetwork.git", rev = "f01575cbf2fc596c0a1761c122aa92525cbb7974" }
payments-rs = { git = "https://github.com/v0l/payments-rs.git", rev = "2804e8eaf0e019fe2a0bac845f22f60e0c8c776e", default-features = false }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1.16", features = ["v4"] }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
