[package]
name = "lnvps_agent"
version.workspace = true
edition.workspace = true
description = "AI support agent for LNVPS — processes support requests using an async-openai agent with API-calling tools"

[[bin]]
name = "lnvps_agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["signal", "time"] }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
serde = { workspace = true }
serde_json.workspace = true
config = { workspace = true }
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
futures = { workspace = true }

async-openai = "0.28"
chrono = { version = "0.4", features = ["serde"] }
nostr = { version = "0.44", default-features = false, features = ["std"] }
nostr-sdk = { rev = "c69c4ae2bf1a5f340aba70c20d09323f5309a4e2", git = "https://github.com/rust-nostr/nostr", default-features = false }
base64 = "0.22"

# Email support channel (IMAP poll + SMTP reply)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
webpki-roots = "0.26"

[dev-dependencies]
tempfile = "3"
