[package]
name = "lnvps_api"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "lnvps_api"
path = "src/bin/api.rs"

[features]
default = [
    "mikrotik",
    "nostr-dm",
    "nostr-dvm",
    "nostr-nwc",
    "nostr-domain",
    "proxmox",
    "lnd",
    "cloudflare",
    "revolut",
    "bitvora",
    "tokio/sync",
    "tokio/io-util",
    "payments-rs/tls-ring"
]
openapi = ["dep:openapi-build-gen"]
mikrotik = ["dep:reqwest"]
nostr-dm = ["dep:nostr-sdk", "nostr-sdk/nip44", "nostr-sdk/nip59"]
nostr-dvm = ["dep:nostr-sdk"]
nostr-domain = ["lnvps_db/nostr-domain"]
nostr-nwc = ["dep:nostr-sdk", "dep:nwc", "nostr-sdk/nip47"]
proxmox = ["dep:reqwest", "dep:ssh2", "dep:tokio-tungstenite"]
libvirt = ["dep:virt", "dep:uuid", "dep:quick-xml"]
lnd = ["payments-rs/method-lnd"]
bitvora = ["payments-rs/method-bitvora"]
cloudflare = ["dep:reqwest"]
revolut = ["payments-rs/method-revolut"]

[dependencies]
lnvps_db = { path = "../lnvps_db" }
lnvps_api_common = { path = "../lnvps_api_common" }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
hex.workspace = true
async-trait.workspace = true
payments-rs.workspace = true
ipnetwork.workspace = true
futures.workspace = true

chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.22", features = ["alloc"] }
urlencoding = "2.1"
rand = "0.9"
clap = { version = "4.5", features = ["derive"] }
ssh-key = "0.6"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
lnurl-rs = { version = "0.9", default-features = false }
mustache = "0.9"
isocountry = "0.3"
hickory-resolver = "0.25"
humantime = "2.2"
backon = { version = "1.6", default-features = false, features = ["tokio-sleep"] }

#nostr-dm
nostr-sdk = { version = "0.44", optional = true, default-features = false }

#nostr-nwc
nwc = { version = "0.44", optional = true }

#proxmox
tokio-tungstenite = { version = "0.28", features = ["native-tls"], optional = true }
ssh2 = { version = "0.9", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

#libvirt
virt = { git = "https://gitlab.com/libvirt/libvirt-rust.git", optional = true }
#virtxml = {git = "https://gitlab.com/libvirt/libvirt-rust-xml.git", optional = true}/
uuid = { version = "1.16", features = ["v4", "serde"], optional = true }
quick-xml = { version = "0.39", features = ["serde", "serialize"], optional = true }

[dev-dependencies]
lightning-invoice = "0.34"
bitcoin = "0.32"

[build-dependencies]
openapi-build-gen = { git = "https://github.com/v0l/openapi-build-gen.git", rev = "b4c946ca891d22c5ab16ce13f17b1bf81c91587c", optional = true }