[package]
name = "lnvps_api"
version.workspace = true
edition.workspace = true
# Disambiguate `cargo run -p lnvps_api` (this package ships extra one-shot bins
# like fix_lnurlp_topups); the e2e runner relies on this.
default-run = "lnvps_api"

[[bin]]
name = "lnvps_api"
path = "src/bin/api.rs"

# One-shot admin tool: re-credit LNURL-pay topups that landed on the wrong VM
# (see PR #152). Decodes the stored BOLT11 memo in-process; no LND connection.
[[bin]]
name = "fix_lnurlp_topups"
path = "src/bin/fix_lnurlp_topups.rs"

[features]
default = [
    "mikrotik",
    "nostr-dm",
    "nostr-dvm",
    "nostr-nwc",
    "nostr-domain",
    "proxmox",
    "linux-ssh",
    "lnd",
    "onchain",
    "cloudflare",
    "ovh",
    "revolut",
    "tokio/sync",
    "tokio/io-util",
    "payments-rs/tls-ring"
]
openapi = ["dep:openapi-build-gen"]
mikrotik = []
# Linux router managed over SSH (shares the ssh2-based SshClient with proxmox)
linux-ssh = ["dep:ssh2"]
nostr-dm = ["dep:nostr-sdk", "nostr-sdk/nip44", "nostr-sdk/nip59"]
nostr-dvm = ["dep:nostr-sdk"]
nostr-domain = ["lnvps_db/nostr-domain", "dep:uuid"]
nostr-nwc = ["dep:nostr-sdk", "dep:nwc", "nostr-sdk/nip47"]
proxmox = ["dep:ssh2", "dep:tokio-tungstenite"]
libvirt = ["dep:virt", "dep:uuid", "dep:quick-xml"]
lnd = ["payments-rs/method-lnd"]
# On-chain Bitcoin payments (LND wallet backend)
onchain = ["payments-rs/method-lnd-onchain"]
# bitvora is disabled - service has been shut down
bitvora = ["payments-rs/method-bitvora"]
cloudflare = []
# OVH reverse DNS provider
ovh = []
revolut = ["payments-rs/method-revolut"]
stripe = ["payments-rs/method-stripe"]

[dependencies]
lnvps_db = { path = "../lnvps_db" }
lnvps_api_common = { path = "../lnvps_api_common" }
try-procedure = { path = "../try-procedure" }

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
hex.workspace = true
async-trait.workspace = true
payments-rs.workspace = true
ipnetwork.workspace = true
futures.workspace = true

chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.22", features = ["alloc"] }
# On-chain Bitcoin address validation for referral payouts.
bitcoin = "0.32"
urlencoding = "2.1"
rand = "0.9"
# ES256 signing for the "Sign in with Apple" client-secret JWT (.p8 key).
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
# Passwordless WebAuthn / passkey login. conditional-ui enables discoverable
# (usernameless) credentials; danger-allow-state-serialisation lets us carry the
# ceremony state through the client inside a signed challenge token.
# danger-credential-internals exposes From<Credential> for Passkey so we can build
# passkeys from credentials registered via the lower-level webauthn-rs-core (needed
# to force discoverable/resident-key registration).
webauthn-rs = { version = "0.5", features = ["conditional-ui", "danger-allow-state-serialisation", "danger-credential-internals"] }
# Lower-level core: high-level start_passkey_registration hardcodes
# require_resident_key(false); we drop to core to force residentKey: required.
webauthn-rs-core = "0.5"
clap = { version = "4.5", features = ["derive"] }
ssh-key = "0.6"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
lnurl-rs = { version = "0.9", default-features = false, features = ["async-https-native"] }
mustache = "0.9"
isocountry = "0.3"
hickory-resolver = "0.26"
humantime = "2.2"
lightning-invoice = "0.34"
regex = "1"

# nostr (for signing agreements)
nostr = { version = "0.44", default-features = false, features = ["std"] }

#nostr-dm
nostr-sdk = { rev = "c69c4ae2bf1a5f340aba70c20d09323f5309a4e2", git = "https://github.com/rust-nostr/nostr", optional = true, default-features = false }

#nostr-nwc
nwc = { rev = "c69c4ae2bf1a5f340aba70c20d09323f5309a4e2", git = "https://github.com/rust-nostr/nostr", optional = true }

#proxmox
tokio-tungstenite = { version = "0.28", features = ["native-tls"], optional = true }
ssh2 = { version = "0.9", optional = true }
reqwest = { workspace = true }

#libvirt
virt = { git = "https://gitlab.com/libvirt/libvirt-rust.git", optional = true }
#virtxml = {git = "https://gitlab.com/libvirt/libvirt-rust-xml.git", optional = true}/
uuid = { version = "1.16", features = ["v4", "serde"], optional = true }
quick-xml = { version = "0.39", features = ["serde", "serialize"], optional = true }

[dev-dependencies]
env_logger = "0.11"
wiremock = "0.6"

[build-dependencies]
openapi-build-gen = { git = "https://github.com/v0l/openapi-build-gen.git", rev = "b4c946ca891d22c5ab16ce13f17b1bf81c91587c", optional = true }