[package]
name = "lnvps_api_admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lnvps_api_admin"
path = "src/bin/admin_api.rs"

[features]
default = ["lnvps_db/admin"]

[dependencies]
lnvps_db = { path = "../lnvps_db" }
lnvps_common = { path = "../lnvps_common" }
lnvps_api_common = { path = "../lnvps_api_common" }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
rocket.workspace = true
hex.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
isocountry = "0.3.2"
ipnetwork.workspace = true
