[package]
name = "lnvps_api_admin"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "lnvps_api_admin"
path = "src/bin/admin_api.rs"

[[bin]]
name = "generate_demo_data"
path = "src/bin/generate_demo_data.rs"

[features]
default = ["lnvps_db/admin"]
demo = ["dep:rand"]

[dependencies]
lnvps_db = { path = "../lnvps_db" }
lnvps_api_common = { path = "../lnvps_api_common", features = ["admin"] }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
hex.workspace = true
isocountry = "0.3.2"
ipnetwork.workspace = true
tokio.workspace = true
payments-rs.workspace = true
futures.workspace = true
async-trait.workspace = true

chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }

#demo
rand = { version = "0.9.2", optional = true }