[package]
name = "lnvps_api_common"
version = "0.1.0"
edition.workspace = true

[features]
default = ["nostr-domain"]
nostr-domain = ["lnvps_db/nostr-domain"]

[dependencies]
lnvps_db = { path = "../lnvps_db" }
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rocket.workspace = true
tokio.workspace = true
hex.workspace = true
async-trait.workspace = true
ipnetwork.workspace = true
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
schemars = { version = "0.8.22", features = ["chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
base64 = { version = "0.22.1", features = ["alloc"] }
nostr = { version = "0.43.0", default-features = false, features = ["std"] }
reqwest = "0.12.22"
rand = "0.9.2"
isocountry = "0.3.2"
redis = { version = "0.32.4", features = ["tokio-comp", "cluster"] }
