[package]
name = "lnvps_api_common"
version = "0.1.0"
edition.workspace = true

[features]
default = ["nostr-domain"]
nostr-domain = ["lnvps_db/nostr-domain"]
admin = ["lnvps_db/admin"]

[dependencies]
lnvps_db = { path = "../lnvps_db" }
try-procedure = { path = "../try-procedure" }
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
hex.workspace = true
async-trait.workspace = true
ipnetwork.workspace = true
futures.workspace = true
payments-rs = { workspace = true, features = ["fiat"] }

chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.22", features = ["alloc"] }
nostr = { version = "0.44", default-features = false, features = ["std"] }
reqwest = "0.13"
rand = "0.9"
isocountry = "0.3"
redis = { version = "1", features = ["tokio-comp", "cluster"] }

[dev-dependencies]
env_logger = "0.11"

