[package]
name = "lnvps_db"
version = "0.1.0"
edition.workspace = true

[features]
default = ["mysql"]
mysql = ["sqlx/mysql"]
nostr-domain = []
admin = []

[dependencies]
anyhow.workspace = true
sqlx = { version = "0.8.2", features = ["chrono", "migrate", "runtime-tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait.workspace = true
url = "2.5.4"
serde.workspace = true
serde_json.workspace = true
aes-gcm = "0.10"
zeroize = { version = "1.8.1", features = ["derive"] }
base64 = "0.22"
log.workspace = true

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["test-util"] }