[package]
name = "lnvps_db"
version = "0.1.0"
edition.workspace = true

[features]
default = ["mysql"]
mysql = ["sqlx/mysql"]
nostr-domain = []
admin = []

[dependencies]
try-procedure = { path = "../try-procedure" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
async-trait.workspace = true

sqlx = { version = "0.8", default-features = false, features = ["mysql", "macros", "chrono", "migrate", "runtime-tokio", "json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
uuid.workspace = true

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["test-util"] }