[workspace]
resolver = "2"
members = ["lnvps_ebpf", "lnvps_fw_common", "lnvps_fw_service"]
# The eBPF crate only builds for the bpfel-unknown-none target (via aya-build
# from lnvps_fw_service/build.rs), so exclude it from default host builds.
default-members = ["lnvps_fw_common", "lnvps_fw_service"]

[workspace.package]
version = "0.4.0"
edition = "2024"

[workspace.dependencies]
lnvps_ebpf = { path = "lnvps_ebpf" }
lnvps_fw_common = { path = "lnvps_fw_common" }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release.package.lnvps_ebpf]
debug = 2
codegen-units = 1
