[package]
name = "lnvps_health"
version = "0.1.0"
edition.workspace = true
description = "Standalone network health monitoring service (MSS, DNS, PMTU checks)"

[[bin]]
name = "lnvps_health"
path = "src/main.rs"

[dependencies]
# Workspace shared
tokio = { workspace = true, features = ["signal", "time", "net", "io-util", "process"] }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
config.workspace = true

# Local dependencies
clap = { version = "4.5", features = ["derive"] }
socket2 = { version = "0.6", features = ["all"] }
libc = "0.2"
hickory-resolver = "0.25"
async-trait.workspace = true

# Prometheus metrics
prometheus = "0.14"
axum = "0.8"

# SMTP notifications
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
