[package]
name = "lnvps_host_util"
version.workspace = true
edition.workspace = true
description = "Host CPU detection utility for LNVPS"

[[bin]]
name = "lnvps-host-info"
path = "src/main.rs"

[features]
default = ["vaapi", "nvml"]
vaapi = ["dep:cros-libva"]
nvml = ["dep:nvml-wrapper"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
raw-cpuid = "11"
cros-libva = { version = "0.0", optional = true }
nvml-wrapper = { version = "0.10", optional = true }
