[package]
name = "lnvps_host_util"
version = "0.2.0"
edition = "2024"
description = "Host CPU detection utility for LNVPS"

[workspace]

[[bin]]
name = "lnvps-host-info"
path = "src/main.rs"

[features]
default = ["vaapi", "nvml"]
vaapi = ["dep:cros-libva"]
nvml = ["dep:nvml-wrapper"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-cpuid = "11"
cros-libva = { version = "0.0", optional = true }
nvml-wrapper = { version = "0.10", optional = true }
