[package]
name = "lnvps_nostr"
version.workspace = true
edition.workspace = true

[dependencies]
lnvps_db = { path = "../lnvps_db", features = ["nostr-domain"] }
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
config.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
hex.workspace = true
