[package]
name = "lnvps_operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lnvps_operator"
path = "src/main.rs"

[dependencies]
lnvps_db = { path = "../lnvps_db", features = ["nostr-domain"] }

# Workspace dependencies
tokio = { workspace = true, features = ["time", "signal"] }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
clap = { version = "4.5.21", features = ["derive"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }