[package]
name = "lnvps_fw_service"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "LNVPS XDP/eBPF DDoS protection firewall daemon"

# Debian packaging (cargo-deb): builds a .deb that installs the daemon binary,
# a systemd unit, and the example config. See .github/workflows/lnvps_fw-deb.yml.
[package.metadata.deb]
name = "lnvps-fw"
maintainer = "LNVPS <admin@lnvps.net>"
copyright = "LNVPS"
section = "net"
priority = "optional"
extended-description = """\
XDP/eBPF DDoS protection firewall for any Linux host in the traffic path
(routers, VM/dedicated hosts, edge/scrubbing boxes). Passively learns open
ports per protected IP and, only under attack, sheds illegitimate traffic in
the kernel (open-port allow-list, SYN-cookies, spoof-gated CIDR blocking).
Managed via a token-authed HTTPS control API with an internal dashboard."""
depends = "$auto"
maintainer-scripts = "debian/"
assets = [
    ["target/release/lnvps_fw_service", "usr/bin/lnvps_fw_service", "755"],
    ["systemd/lnvps_fw.service", "lib/systemd/system/lnvps_fw.service", "644"],
    ["config.example.yaml", "etc/lnvps_fw/config.example.yaml", "644"],
]

[dependencies]
lnvps_fw_common = { workspace = true, features = ["user"] }
tokio = { version = "1.47.1", features = ["macros", "time", "rt", "rt-multi-thread", "net", "signal"] }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
aya = "0.14.0"
aya-log = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
libc = "0.2"
# RESTful control API (increment 7): axum server over rustls (HTTPS required),
# with a self-signed cert auto-generated by rcgen when none is configured.
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
# Self-upgrade: query the GitHub releases API + download the .deb (rustls, no OpenSSL).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = { version = "0.5", features = ["util"] }
# Integrity + authenticity of self-upgrade artifacts.
sha2 = "0.10"
minisign-verify = "0.2"
getrandom = "0.2"
# GeoIP enrichment (ASN + org + country) for IPs listed on the API. Reads
# MaxMind GeoLite2 .mmdb files supplied by the operator; enrichment is skipped
# when no DB is configured (the EULA forbids bundling the DB in the .deb).
maxminddb = "0.28"
# Auto-download of GeoLite2 databases (MaxMind ships .tar.gz over HTTPS keyed
# by the operator's license key); pure-Rust gzip + tar extraction.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"

[build-dependencies]
aya-build = "0.2.0"

[dev-dependencies]
# Firewall datapath test harness (root-only, #[ignore]d): netns setns + raw
# sockets for traffic generation.
nix = { version = "0.29", features = ["sched"] }
http-body-util = "0.1"
